@@ -1,3 +1,12 @@
+2005-08-12  Nathan Sidwell  <nathan@codesourcery.com>
+	    Giovanni Bajo  <giovannibajo@libero.it>
+	PR c++/21799
+	PR c++/8271
+
+	* g++.dg/template/unify8.C: New.
+	* g++.dg/template/unify9.C: New.
+	* g++.dg/template/unify10.C: New.
+
 2005-08-11  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/23266
