@@ -1,3 +1,11 @@
+2005-08-12  Giovanni Bajo  <giovannibajo@libero.it>
+	    Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/21799
+	PR c++/8271
+        * pt.c (unify) <METHOD_TYPE>: Check this-pointer cv-qualifiers
+	explicitly.
+
 2005-08-11  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/23266
